infra estrutura, novos modulos e adequacoes para arquitetura hexgonal

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<modules>
 		<module>domain</module>
 		<module>application</module>
+		<module>infrastructure</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
