--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+*.project
 
 # External tool builders
 .externalToolBuilders/
@@ -57,7 +58,7 @@ local.properties
 .buildpath
 
 # sbteclipse plugin
-.target
+*.target
 
 # Tern plugin
 .tern-project
